adjust <a> font-weight for cross browser visibility, prevent nav from inherit

--- a/app/src/sass/crn_app/_elements-wrappers.scss
+++ b/app/src/sass/crn_app/_elements-wrappers.scss
@@ -78,6 +78,7 @@ body {
 
 a {
     color: $primary;
+    font-weight: 600;
     cursor: pointer;
 }
 
@@ -740,5 +741,3 @@ select {
 .markdown {
     overflow-wrap: break-word;
 }
-
-
